[project]
name = "spyclearbg"
version = "1.0.4"
description = "AI background removal desktop application using Flet and rembg"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flet>=0.85.3",
    "rembg>=2.0.69",
    "pillow>=12.2.0",
    "numba>=0.65.1",
    "llvmlite>=0.47.0",
    "numpy>=2.2.6",
]

[tool.flet]
version = "1.0.4"
build_number = 5
